# homeassistant_meteoromania

./: .gitignore  README.md  coordinator.py  hacs.json  manifest.json  pyproject.toml  requirements_test.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
custom_components/meteo_romania_alerts/: __init__.py  api.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  manifest.json  strings.json
custom_components/meteoromania/: __init__.py  api.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  manifest.json  meteo_alerts_romania_parser.py  strings.json
tests/: __init__.py  conftest.py  test_api.py  test_binary_sensor.py  test_config_flow.py  test_init.py
