[project]
name = "meteo-romania-alerts"
version = "1.0.0"
description = "Home Assistant custom integration for Meteo Romania weather alerts"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes (undefined names, unused imports, syntax issues)
    "W",   # pycodestyle warnings
    "B",   # flake8-bugbear (common bug patterns)
]
ignore = [
    "E501",  # line too long – leave to formatter / personal preference
    "W293",  # blank line contains whitespace
]
